--- a/src/apps_common/seo/locale/ru/LC_MESSAGES/django.po
+++ b/src/apps_common/seo/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-04-12 18:09+0000\n"
+"POT-Creation-Date: 2015-07-27 06:40+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -19,22 +19,66 @@ msgstr ""
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
-#: apps.py:7
+#: admin.py:34 apps.py:7
 msgid "SEO"
 msgstr "SEO"
 
-#: models.py:7
-msgid "Site title"
+#: models.py:9
+msgid "site title"
 msgstr "Название сайта"
 
-#: models.py:8
-msgid "Site keywords"
+#: models.py:10
+msgid "site keywords"
 msgstr "Ключевые слова"
 
-#: models.py:9
-msgid "Site description"
+#: models.py:11
+msgid "site description"
 msgstr "Описание сайта"
 
-#: models.py:12
+#: models.py:14
 msgid "Site config"
-msgstr "Настройки сайта"
+msgstr ""
+
+#: models.py:22 models.py:40
+msgid "title"
+msgstr "загловок"
+
+#: models.py:23
+msgid "keywords"
+msgstr "ключевые слова"
+
+#: models.py:24
+msgid "description"
+msgstr "описание"
+
+#: models.py:25
+msgid "text"
+msgstr "текст"
+
+#: models.py:28 models.py:29
+msgid "SEO data"
+msgstr "SEO-данные"
+
+#: models.py:41
+msgid "position"
+msgstr "положение"
+
+#: models.py:42
+msgid "content"
+msgstr "содержимое"
+
+#: models.py:45
+msgid "counter"
+msgstr "счетчик"
+
+#: models.py:46
+msgid "counters"
+msgstr "счетчики"
+
+#: templates/seo/admin/admin_include.html:6
+msgid "Attention! Errors in SEO form will not prevent saving of main form"
+msgstr "Внимание! Ошибки в SEO-форме не предотвратят сохранение основной формы"
+
+#: templates/seo/admin/admin_include.html:11
+msgid "You should create instance first"
+msgstr "Сначала вы должны создать экземпляр объекта"
