--- a/src/libs/stdimage/locale/ru/LC_MESSAGES/django.po
+++ b/src/libs/stdimage/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-03-20 19:03+0300\n"
+"POT-Creation-Date: 2015-07-27 06:34+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -19,10 +19,22 @@ msgstr ""
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
-#: templates/stdimage/admin_widget.html:21
+#: templates/stdimage/admin_widget.html:18
+msgid "Dimensions: "
+msgstr "Размеры"
+
+#: templates/stdimage/admin_widget.html:18
+msgid "from"
+msgstr "от"
+
+#: templates/stdimage/admin_widget.html:18
+msgid "to"
+msgstr "до"
+
+#: templates/stdimage/admin_widget.html:30
 msgid "Crop image"
 msgstr "Обрезать картинку"
 
-#: templates/stdimage/admin_widget.html:29
+#: templates/stdimage/admin_widget.html:38
 msgid "Delete"
 msgstr "Удалить"
