--- a/src/apps/shop/locale/ru/LC_MESSAGES/django.po
+++ b/src/apps/shop/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-09-24 14:51+0400\n"
+"POT-Creation-Date: 2015-09-24 15:03+0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -28,12 +28,14 @@ msgid "SEO"
 msgstr "SEO"
 
 #: admin.py:57 admin.py:108
-msgid "Make hidden"
-msgstr "Сделать скрытыми"
+#, python-format
+msgid "Hide selected %(verbose_name_plural)s"
+msgstr "Скрыть выбранные %(verbose_name_plural)s"
 
 #: admin.py:61 admin.py:112
-msgid "Make visible"
-msgstr "Сделать видимыми"
+#, python-format
+msgid "Show selected %(verbose_name_plural)s"
+msgstr "Показать выбранные %(verbose_name_plural)s"
 
 #: admin.py:104
 msgid "Categories"
