--- a/src/apps/users/locale/ru/LC_MESSAGES/django.po
+++ b/src/apps/users/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-10-01 15:01+0400\n"
+"POT-Creation-Date: 2015-10-01 15:21+0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -96,7 +96,7 @@ msgstr "Логин должен содержать не более %(limit_value
 
 #: forms.py:55
 msgid "Please enter your email"
-msgstr "Введите логин"
+msgstr "Введите e-mail"
 
 #: forms.py:56
 msgid "This e-mail address is already taken"
