--- a/src/apps_common/attachable_blocks/locale/ru/LC_MESSAGES/django.po
+++ b/src/apps_common/attachable_blocks/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-09-18 22:21+0400\n"
+"POT-Creation-Date: 2015-10-02 12:45+0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -23,7 +23,7 @@ msgstr ""
 msgid "Block"
 msgstr "Блок"
 
-#: models.py:15 models.py:71
+#: models.py:15 models.py:73
 msgid "block type"
 msgstr "тип блока"
 
@@ -37,40 +37,40 @@ msgstr "Для внутренних нужд"
 
 #: models.py:21
 msgid "visible"
-msgstr ""
+msgstr "видимость"
 
 #: models.py:22
 msgid "create date"
-msgstr ""
+msgstr "дата создания"
 
 #: models.py:23
 msgid "change date"
-msgstr ""
+msgstr "дата изменения"
 
 #: models.py:26
-msgid "Attachable block"
-msgstr ""
+msgid "attachable block"
+msgstr "подключаемый блок"
 
 #: models.py:27
-msgid "Attachable blocks"
-msgstr ""
-
-#: models.py:72
-msgid "block"
-msgstr ""
-
-#: models.py:73
-msgid "set name"
-msgstr ""
+msgid "attachable blocks"
+msgstr "подключаемые блоки"
 
 #: models.py:74
-msgid "order"
-msgstr ""
+msgid "block"
+msgstr "блок"
 
-#: models.py:77
-msgid "Attached block"
-msgstr ""
+#: models.py:75
+msgid "set name"
+msgstr "набор"
 
-#: models.py:78
-msgid "Attached blocks"
-msgstr ""
+#: models.py:76
+msgid "sort order"
+msgstr "порядок"
+
+#: models.py:79
+msgid "attached block"
+msgstr "подключенный блок"
+
+#: models.py:80
+msgid "attached blocks"
+msgstr "подключенные блоки"
