--- a/src/apps/shop/locale/ru/LC_MESSAGES/django.po
+++ b/src/apps/shop/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-10-06 00:32+0400\n"
+"POT-Creation-Date: 2015-11-13 09:25+0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -19,7 +19,7 @@ msgstr ""
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
-#: admin.py:36 admin.py:82 admin.py:176 admin.py:255
+#: admin.py:36 admin.py:82 admin.py:176 admin.py:293
 msgid "General"
 msgstr "Общие"
 
@@ -53,23 +53,47 @@ msgstr "Превью"
 msgid "Price"
 msgstr "Цена"
 
-#: admin.py:218 admin.py:239
+#: admin.py:218 admin.py:294
 msgid "Status"
 msgstr "Статус"
 
-#: admin.py:235 templates/shop/admin/products.html:10
+#: admin.py:238 templates/shop/admin/products.html:10
 msgid "Cost"
 msgstr "Цена"
 
+#: admin.py:244
+msgid "Cancelled"
+msgstr "Отменен"
+
+#: admin.py:250
+msgid "Checked"
+msgstr "Проверен"
+
 #: admin.py:256
+msgid "Paid"
+msgstr "Оплачен"
+
+#: admin.py:262
+msgid "Confirmed"
+msgstr "Подтвержден"
+
+#: admin.py:268
+msgid "Archived"
+msgstr "В архиве"
+
+#: admin.py:274
+msgid "Created"
+msgstr "Дата создания"
+
+#: admin.py:295
 msgid "Products"
 msgstr "Товары"
 
-#: admin.py:264
+#: admin.py:303
 msgid "Products cost"
 msgstr "Цена товаров"
 
-#: admin.py:269 templates/shop/admin/products.html:12
+#: admin.py:308 templates/shop/admin/products.html:12
 msgid "Total cost"
 msgstr "Итого"
 
@@ -77,11 +101,11 @@ msgstr "Итого"
 msgid "Shop"
 msgstr "Магазин"
 
-#: models.py:21 models.py:58 models.py:174
-msgid "title"
-msgstr "название"
+#: models.py:21
+msgid "header"
+msgstr "заголовок"
 
-#: models.py:22 models.py:227
+#: models.py:22 models.py:77 models.py:241
 msgid "change date"
 msgstr "дата изменения"
 
@@ -93,15 +117,19 @@ msgstr "Настройки"
 msgid "parent category"
 msgstr "родительская категория"
 
-#: models.py:59 models.py:175
+#: models.py:58 models.py:222
+msgid "title"
+msgstr "название"
+
+#: models.py:59 models.py:223
 msgid "alias"
 msgstr "алиас"
 
-#: models.py:62 models.py:178
+#: models.py:62 models.py:226
 msgid "Leave it blank to auto generate it"
 msgstr "Оставьте пустым для автогенерации"
 
-#: models.py:64 models.py:225
+#: models.py:64 models.py:239
 msgid "visible"
 msgstr "видимость"
 
@@ -117,87 +145,123 @@ msgstr "количество видимых товаров"
 msgid "sort order"
 msgstr "порядок"
 
-#: models.py:80 models.py:186
-msgid "category"
-msgstr "категория"
-
-#: models.py:81
-msgid "categories"
-msgstr "категории"
-
-#: models.py:180
-msgid "serial number"
-msgstr "артикул"
-
-#: models.py:183
-msgid "Unique identifier of the product"
-msgstr "Уникальный идентификатор товара"
-
-#: models.py:189
-msgid "photo"
-msgstr "фото"
-
-#: models.py:215
-msgid "stored_crop"
-msgstr "область обрезки"
-
-#: models.py:220
-msgid "description"
-msgstr "описание"
-
-#: models.py:224
-msgid "price"
-msgstr "цена"
-
-#: models.py:226 models.py:319
+#: models.py:76 models.py:240 models.py:373
 msgid "create date"
 msgstr "дата создания"
 
-#: models.py:232 models.py:353 models.py:358
+#: models.py:82 models.py:219
+msgid "category"
+msgstr "категория"
+
+#: models.py:83
+msgid "categories"
+msgstr "категории"
+
+#: models.py:228
+msgid "serial number"
+msgstr "артикул"
+
+#: models.py:231
+msgid "Unique identifier of the product"
+msgstr "Уникальный идентификатор товара"
+
+#: models.py:233
+msgid "gallery"
+msgstr "галерея"
+
+#: models.py:234
+msgid "description"
+msgstr "описание"
+
+#: models.py:238
+msgid "price"
+msgstr "цена"
+
+#: models.py:246 models.py:447 models.py:452
 msgid "product"
 msgstr "товар"
 
-#: models.py:233 models.py:359
+#: models.py:247 models.py:453
 msgid "products"
 msgstr "товары"
 
-#: models.py:302
-msgid "Not paid"
-msgstr "Не оплачен"
+#: models.py:330
+msgid "UUID"
+msgstr "UUID"
 
-#: models.py:303
-msgid "Paid"
-msgstr "Оплачен"
-
-#: models.py:306
-msgid "status"
-msgstr "статус"
-
-#: models.py:310
-msgid "pay date"
-msgstr "дата оплаты"
-
-#: models.py:314
-msgid "products cost"
-msgstr "цена продуктов"
-
-#: models.py:318
+#: models.py:331
 msgid "session"
 msgstr "сессия"
 
-#: models.py:324 models.py:352
+#: models.py:332
+msgid "products cost"
+msgstr "цена продуктов"
+
+#: models.py:338
+msgid "confirmed"
+msgstr "подтвержден"
+
+#: models.py:339
+msgid "Confirmed by the user"
+msgstr "Подтвержден пользователем"
+
+#: models.py:340
+msgid "confirm date"
+msgstr "дата подтверждения"
+
+#: models.py:346
+msgid "cancelled"
+msgstr "отменен"
+
+#: models.py:347
+msgid "cancel date"
+msgstr "дата отмены"
+
+#: models.py:353
+msgid "checked"
+msgstr "проверен"
+
+#: models.py:354
+msgid "check date"
+msgstr "дата проверки"
+
+#: models.py:360
+msgid "paid"
+msgstr "оплачен"
+
+#: models.py:361
+msgid "pay date"
+msgstr "дата оплаты"
+
+#: models.py:367
+msgid "archived"
+msgstr "в архиве"
+
+#: models.py:368
+msgid "archivation date"
+msgstr "дата архивации"
+
+#: models.py:378 models.py:446
 msgid "order"
 msgstr "заказ"
 
-#: models.py:325
+#: models.py:379
 msgid "orders"
 msgstr "заказы"
 
-#: models.py:354
+#: models.py:397
+msgid "Unconfirmed order can't be checked"
+msgstr "Не подтвержденный заказ не может быть проверен"
+
+#: models.py:399
+msgid "Unconfirmed order can't be paid"
+msgstr "Не подтвержденный заказ не может быть оплачен"
+
+#: models.py:448
 msgid "price per item"
 msgstr "цена за единицу"
 
-#: models.py:355
+#: models.py:449
 msgid "count"
 msgstr "количество"
 
